# TextToSQL

./: .env.local  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  test_tokens.py
backend/: __init__.py  app.py  main.py  paths.py
backend/config/: __init__.py  azure_client.py  llm.py
backend/core/: __init__.py  embedder.py  file_handler.py  query_executor.py  sql_generator.py  vector_store.py
backend/db/: __init__.py  db.py  db_models.py
backend/routes/: __init__.py  databases.py  join_graphs.py  metadata.py  query.py  upload.py
backend/routes/database/: __init__.py  main.py
backend/services/: __init__.py  query_pipeline.py
backend/utils/: __init__.py  db_registry.py  join_graph.py  join_graph_builder.py  logger.py  metadata_builder.py  prompt_builder.py  state.py
docs/: TextToSQL_Documentation.docx  TextToSQL_Presentation.pptx  generate_presentation.py  ~$TextToSQL_Presentation.pptx  ~$xtToSQL_Documentation.docx
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatInput.css  ChatMessage.css  ChatMessage.js  DatabaseSchemaView.css  DatabaseSchemaView.js  FileUploadModal.css  FileUploadModal.js  FullScreenTableModal.css  QueryModal.css  QueryResultsPanel.css  QueryResultsPanel.js  Sidebar.css  Sidebar.js  ViewDataTable.css  ViewDataTable.js
frontend/src/components/common/: FullScreenTableModal.css  FullScreenTableModal.js
frontend/src/components/data/: ViewDataTable.css  ViewDataTable.js
frontend/src/components/layout/: Sidebar.css
(+11 files in other folders)
