[project]
name = "texttosql"
version = "0.1.0"
description = "Text-to-SQL Backend with PostgreSQL Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "psycopg2==2.9.12",
    "sqlalchemy==2.0.50",
    "python-dotenv==1.0.0",
    "langchain>=1.3.9",
    "langchain-openai>=0.0.1",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "python-pptx>=1.0.2",
]
